# knapsack

./: Cargo.toml  Makefile  ftpas_analyzer.py  graph.py  plot.py  runner.py  zprava.html  zprava.md
src/: ioutils.rs  main.rs
src/solvers/: approx_pruning.rs  dynamic_cost.rs  dynamic_weight.rs  ftpas.rs  greedy.rs  mod.rs  naive.rs  pruning.rs  redux.rs  tabusearch.rs  utils.rs
