[package]
name = "knapsack"
version = "0.1.0"
authors = ["Martin Quarda <martin@quarda.cz>"]
edition = "2018"

[dependencies]
structopt = "0.3"
itertools = "0.9"
#lazy_format = "1.8"
gcd = "2.0"
num-rational = "0.3"
derive_more = "0.99"
enum_dispatch = "0.3"
arrayvec = "0.5"

[profile.release]
lto="thin"
opt-level = 3
